--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#tips">Tips</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#gallery">Galery</a>
+                <a class="nav-link" href="#gallery">Gallery</a>
               </li>
             </ul>
           </div>
